@@ -23,6 +23,7 @@ The common usage of this method is
 r$predict(outfile, verbose = TRUE)}
 }
 \examples{
+set.seed(123) # this is a randomized algorithm
 trainset = system.file("dat", "smalltrain.txt", package = "recosystem")
 testset = system.file("dat", "smalltest.txt", package = "recosystem")
 r = Reco()
