@@ -167,6 +167,7 @@ Below is an example on some simulated data:
 
 ```{r}
 library(recosystem)
+set.seed(123) # this is a randomized algorithm
 trainset = system.file("dat", "smalltrain.txt", package = "recosystem")
 testset = system.file("dat", "smalltest.txt", package = "recosystem")
 r = Reco()
